fixed spacing issues with former trustees of legal aid

--- a/src/pages/board.module.scss
+++ b/src/pages/board.module.scss
@@ -38,3 +38,9 @@
 	font-style: italic;
 	margin-bottom: 1em;
 }
+
+.formerEmployer {
+	font-family: 'Fira Sans', sans-serif;
+	font-weight: 200;
+	// font-style: italic;
+}
